--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -298,7 +298,7 @@
                                       </svg>
                                      </div>
                                      <div>
-                                      <div class="_4gelgl">E1</div>
+                                      <div class="modal__list-group-text">E1</div>
                                       <div class="text-sm">A. Bonifacio, Quezon City, Metro Manila</div>
                                      </div>
                                     </li>
