--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -1960,7 +1960,7 @@
                                           mail us to choose musician
                                           before booking</h3>
                                       </div>
-                                      <div class="_4gelgl"><a target="_blank" href="/experience_reservation/TARYZPXS"
+                                      <div class="modal__list-group-text"><a target="_blank" href="/experience_reservation/TARYZPXS"
                                           class="text-link">View
                                           experience details</a></div>
                                       <div class="_161kcnd">
@@ -2005,7 +2005,7 @@
                                               </div>
                                             </a></div>
                                           <div class="_1n7czef">Kuniatsu (Host)</div>
-                                          <div class="_4gelgl"><button type="button" class="btn-link-condensed">Report</button>
+                                          <div class="modal__list-group-text"><button type="button" class="btn-link-condensed">Report</button>
                                           </div>
                                         </div>
                                         <div class="_a4vf2m">
@@ -3768,7 +3768,7 @@
                                         mail us to choose musician
                                         before booking</h3>
                                     </div>
-                                    <div class="_4gelgl"><a target="_blank" href="/experience_reservation/TARYZPXS"
+                                    <div class="modal__list-group-text"><a target="_blank" href="/experience_reservation/TARYZPXS"
                                         class="text-link">View
                                         experience details</a></div>
                                     <div class="_161kcnd">
@@ -3813,7 +3813,7 @@
                                             </div>
                                           </a></div>
                                         <div class="_1n7czef">Kuniatsu (Host)</div>
-                                        <div class="_4gelgl"><button type="button" class="btn-link-condensed">Report</button>
+                                        <div class="modal__list-group-text"><button type="button" class="btn-link-condensed">Report</button>
                                         </div>
                                       </div>
                                       <div class="_a4vf2m">
