--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1200,7 +1200,7 @@
                                               "
                                             >
                                               <div>
-                                                <div class="_4gelgl">
+                                                <div class="modal__list-group-text">
                                                   <button
                                                     type="button"
                                                     class="btn-link-condensed"
@@ -1242,7 +1242,7 @@
                                                 padding-bottom: 12px;
                                               "
                                             >
-                                              <div class="_4gelgl">
+                                              <div class="modal__list-group-text">
                                                 <div class="_ymq6as">
                                                   <div class="font-semibold">
                                                     Cancellation policy
@@ -10660,56 +10660,56 @@
                 <div class="modal__body">
 
 <section>
-  <div class="_v1m4jk">
-    <div class="_rjfnlo">
+  <div class="modal__lead-wrapper">
+    <div class="modal__lead">
       <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
         Cancellation policy
       </h2>
     </div>
   </div>
   <div>
-    <div class="_o26o64">
+    <div class="modal__list-group-heading">
       <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
         Cancel by
       </h3>
     </div>
   </div>
-  <div class="_1cnosla">
+  <div class="modal__list-group-item">
     <span class="visually-hidden dir dir-ltr"
       >Cancel by November 11 at 10:00 AM and you'll get a No refund.</span
     >
     <div aria-hidden="true">
-      <div class="_dj903s">
-        <div class="_v0q64e7">
-          <div class="_68scml">48 hours</div>
-          <div class="_1r0bq6e">after booking</div>
+      <div class="modal__list-group-body">
+        <div class="modal__list-group-title-wrapper">
+          <div class="modal__list-group-title">48 hours</div>
+          <div class="modal__list-group-subtitle">after booking</div>
         </div>
-        <div class="_96puxn7"><div class="_4gelgl">Full refund: Get back 100% of what you paid.</div></div>
+        <div class="modal__list-group-text-wrapper"><div class="modal__list-group-text">Full refund: Get back 100% of what you paid.</div></div>
       </div>
     </div>
   </div>
-  <div class="_1cnosla">
+  <div class="modal__list-group-item">
     <span class="visually-hidden dir dir-ltr">Cancel by November 11 at 10:00 AM and you'll get a No refund.</span>
     <div aria-hidden="true">
-      <div class="_dj903s">
-        <div class="_v0q64e7">
-          <div class="_68scml">Nov 9</div>
-          <div class="_1r0bq6e">2:00 PM</div>
+      <div class="modal__list-group-body">
+        <div class="modal__list-group-title-wrapper">
+          <div class="modal__list-group-title">Nov 9</div>
+          <div class="modal__list-group-subtitle">2:00 PM</div>
         </div>
-        <div class="_96puxn7"><div class="_4gelgl">Partial refund: Get back 50% of every night. No refund of the service fee.</div></div>
+        <div class="modal__list-group-text-wrapper"><div class="modal__list-group-text">Partial refund: Get back 50% of every night. No refund of the service fee.</div></div>
       </div>
     </div>
   </div>
-  <div class="_1cnosla">
+  <div class="modal__list-group-item">
     <span class="visually-hidden dir dir-ltr">Cancel by November 11 at 10:00 AM and you'll get a No refund.</span>
     <div aria-hidden="true">
-      <div class="_dj903s">
-        <div class="_v0q64e7">
-          <div class="_68scml">Nov 16</div>
-          <div class="_1r0bq6e">2:00 PM</div>
-          <div class="_1r0bq6e">(check-in)</div>
+      <div class="modal__list-group-body">
+        <div class="modal__list-group-title-wrapper">
+          <div class="modal__list-group-title">Nov 16</div>
+          <div class="modal__list-group-subtitle">2:00 PM</div>
+          <div class="modal__list-group-subtitle">(check-in)</div>
         </div>
-        <div class="_96puxn7"><div class="_4gelgl">No refund</div></div>
+        <div class="modal__list-group-text-wrapper"><div class="modal__list-group-text">No refund</div></div>
       </div>
     </div>
   </div>
@@ -10772,7 +10772,7 @@
                 </header>
                 <div class="modal__body">
 
-<div class="_1uvwwwt">
+<div class="modal__padding-xs">
   <div class="_1ou8uzt">
     <ul class="_10cqbup">
       <li class="_irhzzc">
