--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -960,7 +960,7 @@
                                 </ol>
                             </nav>
                             <div class="_fftcd5" style="margin-top:40px">
-                                <div class="_dj903s">
+                                <div class="modal__list-group-body">
                                     <div class="_56cas6i">
                                         <div class="_5ilrdp">
                                             <div style="color:#222222">
