--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -998,7 +998,7 @@
                                       and Stephanie</li>
                               </ol>
                           </nav>
-                          <div class="_dj903s">
+                          <div class="modal__list-group-body">
                               <div class="_56cas6i">
                                   <div class="_cntgei">
                                       <div class="text-dark">
