--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1490,7 +1490,7 @@
                           </div>
                           <div class="_1pl2z8b">
                            <div class="_kzc21">
-                            <div class="_4gelgl">Minimum group size</div>
+                            <div class="modal__list-group-text">Minimum group size</div>
                             <div class="_ckeeqk">₱1,280 x 2 adults, 20% off</div>
                            </div>
                            <div class="_z73wt8">₱2,560</div>
@@ -1511,7 +1511,7 @@
                           </div>
                           <div class="_1pl2z8b">
                            <div class="_kzc21">
-                            <div class="_4gelgl">Maximum group size</div>
+                            <div class="modal__list-group-text">Maximum group size</div>
                             <div class="_ckeeqk">₱1,280 x 10 adults, 20% off</div>
                            </div>
                            <div class="_z73wt8">₱12,800</div>
