--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -424,7 +424,7 @@
                                           </div>
 
 <div class="_fkc0zx">
-  <div class="_dj903s">
+  <div class="modal__list-group-body">
     <div class="_1787zsai">
       <div class="_si3zpp">
         <button disabled="" type="button" class="btn-dark">
@@ -932,7 +932,7 @@
                                               </div>
                                             </div>
                                             <div class="_fkc0zx">
-                                              <div class="_dj903s">
+                                              <div class="modal__list-group-body">
                                                 <div class="_1787zsai">
                                                   <div class="_si3zpp">
                                                     <button
