--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -991,7 +991,7 @@
                               </li>
                             </ol>
                           </nav>
-                          <div class="_dj903s">
+                          <div class="modal__list-group-body">
                             <div class="_56cas6i">
                               <div class="_cntgei">
                                 <div class="text-dark">
