--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10713,7 +10713,7 @@
       </div>
     </div>
   </div>
-  <div class="_nt5bsb">
+  <div class="my-8">
     <a target="_blank" href="/help/article/2637" class="text-link"
       >Learn more about cancellation policies</a
     >
