--- a/account/profile.html
+++ b/account/profile.html
@@ -841,7 +841,7 @@
                                         <form
                                           data-veloute="user_profile_bio_edit_form"
                                         >
-                                          <div class="_1ou8uzt">
+                                          <div class="mb-8">
                                             <label for="about"
                                               ><div class="textarea-label-wrapper">About</div>
                                               <div class="mt-2">
@@ -862,7 +862,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               </div></label
                                             >
                                           </div>
-                                          <div class="_1ou8uzt">
+                                          <div class="mb-8">
                                             <div class="site-content__content-menu">
                                               <div
                                                 class="relative"
@@ -901,7 +901,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               ></span>
                                             </div>
                                           </div>
-                                          <div class="_1ou8uzt">
+                                          <div class="mb-8">
                                             <div class="_plk1gy">
                                               Languages I speak
                                             </div>
@@ -988,7 +988,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               </button>
                                             </div>
                                           </div>
-                                          <div class="_1ou8uzt">
+                                          <div class="mb-8">
                                             <div class="site-content__content-menu-wrapper">
                                               <label class="input-field" for="work"
                                                 ><div>Work</div>
@@ -1934,7 +1934,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                   <form
                                     data-veloute="user_profile_bio_edit_form"
                                   >
-                                    <div class="_1ou8uzt">
+                                    <div class="mb-8">
                                       <label for="about"
                                         ><div class="textarea-label-wrapper">About</div>
                                         <div class="mt-2">
@@ -1955,7 +1955,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </div></label
                                       >
                                     </div>
-                                    <div class="_1ou8uzt">
+                                    <div class="mb-8">
                                       <div class="site-content__content-menu">
                                         <div
                                           class="relative"
@@ -1994,7 +1994,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         ></span>
                                       </div>
                                     </div>
-                                    <div class="_1ou8uzt">
+                                    <div class="mb-8">
                                       <div class="_plk1gy">
                                         Languages I speak
                                       </div>
@@ -2074,7 +2074,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </button>
                                       </div>
                                     </div>
-                                    <div class="_1ou8uzt">
+                                    <div class="mb-8">
                                       <div class="site-content__content-menu-wrapper">
                                         <label class="input-field" for="work"
                                           ><div>Work</div>
