--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10773,7 +10773,7 @@
                 <div class="modal__body">
 
 <div class="modal__padding-xs">
-  <div class="_1ou8uzt">
+  <div class="mb-8">
     <ul class="_10cqbup">
       <li class="_irhzzc">
         <div class="_1eaes69">
