--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -663,7 +663,7 @@ Cheerful private villa with pool</textarea
               </div>
               <div class="_1lnubva"></div>
              </div>
-             <div class="_1eaes69">
+             <div class="flex-0-auto">
               <div class="o1f1deyb dir dir-ltr">
                <div class="cp68eyg dir dir-ltr">
                 <div class="_1icr19o" style="width: 48px;">
@@ -882,7 +882,7 @@ Cheerful private villa with pool</textarea
               </div>
               <div class="_1lnubva"></div>
              </div>
-             <div class="_1eaes69">
+             <div class="flex-0-auto">
               <div class="o1f1deyb dir dir-ltr">
                <div class="cp68eyg dir dir-ltr">
                 <div class="_1icr19o" style="width: 48px;">
