--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -6614,7 +6614,7 @@
                     <footer>
                       <div class="flex-before-after dir dir-ltr" style="">
                         <div style="--gp-section-max-width: 1120px">
-<div class="_1eaes69">
+<div class="flex-0-auto">
                                     <div class="o1f1deyb dir dir-ltr"><button id="messaging_c3pi_composebar_skip_to_inbox_link" type="button" class="_1ete8eke">Return to Inbox</button>
                                       <div class="cp68eyg dir dir-ltr">
                                         <div class="_1icr19o" style="width: 48px;">
