--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6624,7 +6624,7 @@
                           <div class="_1gglzn7"><button data-testid="choose-share-method-modal__send-link-button" type="button"
                               class="app-theme__sidebar-expandable-button">
                               <div class="_sggpze">
-                                <div class="_1eaes69"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                <div class="flex-0-auto"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                     aria-hidden="true" role="presentation" focusable="false"
                                     style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                     <path
@@ -6640,7 +6640,7 @@
                           <div><button data-testid="choose-share-method-modal__invite-others-button" type="button"
                               class="app-theme__sidebar-expandable-button">
                               <div class="_sggpze">
-                                <div class="_1eaes69"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
+                                <div class="flex-0-auto"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
                                     aria-hidden="true" role="presentation" focusable="false"
                                     style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                     <path
