--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -953,7 +953,7 @@
                                       </div>
                                       <div class="_1lnubva"></div>
                                     </div>
-                                    <div class="_1eaes69">
+                                    <div class="flex-0-auto">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                           class="_1ete8eke">Return to Inbox</button><span class="visually-hidden dir dir-ltr"
@@ -1216,7 +1216,7 @@
                                       </div>
                                       <div class="_1lnubva"></div>
                                     </div>
-                                    <div class="_1eaes69">
+                                    <div class="flex-0-auto">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                           class="_1ete8eke">Return to Inbox</button>
@@ -1456,7 +1456,7 @@
                                       </div>
                                       <div class="_1lnubva"></div>
                                     </div>
-                                    <div class="_1eaes69">
+                                    <div class="flex-0-auto">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                           class="_1ete8eke">Return to Inbox</button>
@@ -1861,7 +1861,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_1eaes69">
+                                    <div class="flex-0-auto">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                           class="_1ete8eke">Return to Inbox</button>
@@ -2766,7 +2766,7 @@
                                     </div>
                                     <div class="_1lnubva"></div>
                                   </div>
-                                  <div class="_1eaes69">
+                                  <div class="flex-0-auto">
                                     <div class="o1f1deyb dir dir-ltr"><button
                                         id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                         class="_1ete8eke">Return to Inbox</button><span class="visually-hidden dir dir-ltr"
@@ -3022,7 +3022,7 @@
                                     </div>
                                     <div class="_1lnubva"></div>
                                   </div>
-                                  <div class="_1eaes69">
+                                  <div class="flex-0-auto">
                                     <div class="o1f1deyb dir dir-ltr"><button
                                         id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                         class="_1ete8eke">Return to Inbox</button>
@@ -3275,7 +3275,7 @@
                                     </div>
                                     <div class="_1lnubva"></div>
                                   </div>
-                                  <div class="_1eaes69">
+                                  <div class="flex-0-auto">
                                     <div class="o1f1deyb dir dir-ltr"><button
                                         id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                         class="_1ete8eke">Return to Inbox</button>
@@ -3643,7 +3643,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1eaes69">
+                                  <div class="flex-0-auto">
                                     <div class="o1f1deyb dir dir-ltr"><button
                                         id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                         class="_1ete8eke">Return to Inbox</button>
