--- a/payments/payment.html
+++ b/payments/payment.html
@@ -9794,7 +9794,7 @@
                     <div class="list-group-checked__text-wrapper">
                       <div class="list-group-checked__text-active">Philippines</div>
                     </div>
-                    <div class="_1eaes69">
+                    <div class="flex-0-auto">
                       <div class="list-group-checked__icon-wrapper">
                         <div class="list-group-checked__icon">
                           <svg
@@ -10776,7 +10776,7 @@
   <div class="mb-8">
     <ul class="_10cqbup">
       <li class="_irhzzc">
-        <div class="_1eaes69">
+        <div class="flex-0-auto">
           <svg
             viewBox="0 0 24 24"
             role="presentation"
@@ -10799,7 +10799,7 @@
         </div>
       </li>
       <li class="_irhzzc">
-        <div class="_1eaes69">
+        <div class="flex-0-auto">
           <svg
             viewBox="0 0 24 24"
             role="presentation"
@@ -10820,7 +10820,7 @@
         <div class="_gg3jno"><span>No pets</span></div>
       </li>
       <li class="_irhzzc">
-        <div class="_1eaes69">
+        <div class="flex-0-auto">
           <svg
             viewBox="0 0 24 24"
             role="presentation"
@@ -10841,7 +10841,7 @@
         <div class="_gg3jno"><span>No parties or events</span></div>
       </li>
       <li class="_irhzzc">
-        <div class="_1eaes69">
+        <div class="flex-0-auto">
           <svg
             viewBox="0 0 24 24"
             role="presentation"
