--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -944,7 +944,7 @@
                         <div class="_9d2j0e">
                           <nav aria-label="breadcrumb">
                             <ol class="_1nqxw3c">
-                              <li class="_1eaes69">
+                              <li class="flex-0-auto">
                                 <a href="/resources/hosting-experiences" class="_pt3ip3y">
                                   <div class="_7yqyxg" style="color:#222222">Resource Center</div>
                                 </a>
@@ -958,7 +958,7 @@
                                   </div>
                                 </div>
                               </li>
-                              <li class="_1eaes69">
+                              <li class="flex-0-auto">
                                 <a href="/resources/hosting-experiences/t/attracting-bookings-59" class="_pt3ip3y">
                                     <div class="_7yqyxg" style="color:#222222">Attracting bookings</div>
                                 </a>
@@ -971,7 +971,7 @@
                                   </div>
                                 </div>
                               </li>
-                              <li class="_1eaes69">
+                              <li class="flex-0-auto">
                                 <a href="/resources/hosting-experiences/t/optimizing-your-experience-page-66" class="_pt3ip3y">
                                     <div class="_7yqyxg" style="color:#222222">Optimizing your Experience page</div>
                                 </a>
