--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -944,7 +944,7 @@
                         <div class="_kpohlqa" style="margin-top:40px;margin-bottom:40px;margin-left:24px;margin-right:24px">
                             <nav aria-label="breadcrumb">
                                 <ol class="_1nqxw3c">
-                                    <li class="_1eaes69"><a href="/resources/hosting-experiences" class="_pt3ip3y">
+                                    <li class="flex-0-auto"><a href="/resources/hosting-experiences" class="_pt3ip3y">
                                             <div class="_7yqyxg" style="color:#222222">Resource Center</div>
                                         </a>
                                         <div class="inline-block" style="margin-left:8px;margin-right:8px">
