--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -956,7 +956,7 @@
                         <div class="_9d2j0e">
                           <nav aria-label="breadcrumb">
                               <ol class="_1nqxw3c hidden-scrollbar">
-                                  <li class="_1eaes69"><a href="/resources/hosting-experiences" class="_pt3ip3y">
+                                  <li class="flex-0-auto"><a href="/resources/hosting-experiences" class="_pt3ip3y">
                                           <div class="_7yqyxg" style="color:#222222">Resource Center</div>
                                       </a>
                                       <div class="inline-block" style="margin-left:8px;margin-right:8px">
@@ -968,7 +968,7 @@
                                               </svg></div>
                                       </div>
                                   </li>
-                                  <li class="_1eaes69"><a href="/resources/hosting-experiences/t/attracting-bookings-59"
+                                  <li class="flex-0-auto"><a href="/resources/hosting-experiences/t/attracting-bookings-59"
                                           class="_pt3ip3y">
                                           <div class="_7yqyxg" style="color:#222222">Attracting bookings</div>
                                       </a>
@@ -981,7 +981,7 @@
                                               </svg></div>
                                       </div>
                                   </li>
-                                  <li class="_1eaes69"><a href="/resources/hosting-experiences/t/what-guests-are-searching-for-67"
+                                  <li class="flex-0-auto"><a href="/resources/hosting-experiences/t/what-guests-are-searching-for-67"
                                           class="_pt3ip3y">
                                           <div class="_7yqyxg" style="color:#222222">What guests are searching for</div>
                                       </a>
