--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -670,7 +670,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
               </div>
               <div class="_1lnubva"></div>
              </div>
-             <div class="_1eaes69">
+             <div class="flex-0-auto">
               <div class="o1f1deyb dir dir-ltr">
                <div class="cp68eyg dir dir-ltr">
                 <div class="_1icr19o" style="width: 48px;">
@@ -890,7 +890,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
               </div>
               <div class="_1lnubva"></div>
              </div>
-             <div class="_1eaes69">
+             <div class="flex-0-auto">
               <div class="o1f1deyb dir dir-ltr">
                <div class="cp68eyg dir dir-ltr">
                 <div class="_1icr19o" style="width: 48px;">
