--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -806,7 +806,7 @@
               </div>
               <div class="_1lnubva"></div>
              </div>
-             <div class="_1eaes69">
+             <div class="flex-0-auto">
               <div class="o1f1deyb dir dir-ltr">
                <div class="cp68eyg dir dir-ltr">
                 <div class="_1icr19o" style="width: 48px;">
@@ -1025,7 +1025,7 @@
               </div>
               <div class="_1lnubva"></div>
              </div>
-             <div class="_1eaes69">
+             <div class="flex-0-auto">
               <div class="o1f1deyb dir dir-ltr">
                <div class="cp68eyg dir dir-ltr">
                 <div class="_1icr19o" style="width: 48px;">
