--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -736,7 +736,7 @@
                                       </div>
                                       <div class="_1lnubva"></div>
                                     </div>
-                                    <div class="_1eaes69">
+                                    <div class="flex-0-auto">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                           class="_1ete8eke">Return to Inbox</button><span class="visually-hidden dir dir-ltr"
@@ -999,7 +999,7 @@
                                       </div>
                                       <div class="_1lnubva"></div>
                                     </div>
-                                    <div class="_1eaes69">
+                                    <div class="flex-0-auto">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                           class="_1ete8eke">Return to Inbox</button>
@@ -1239,7 +1239,7 @@
                                       </div>
                                       <div class="_1lnubva"></div>
                                     </div>
-                                    <div class="_1eaes69">
+                                    <div class="flex-0-auto">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                           class="_1ete8eke">Return to Inbox</button>
@@ -1644,7 +1644,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_1eaes69">
+                                    <div class="flex-0-auto">
                                       <div class="o1f1deyb dir dir-ltr"><button
                                           id="messaging_c3pi_composebar_skip_to_inbox_link" type="button"
                                           class="_1ete8eke">Return to Inbox</button>
