confirm-pay__trip-detail-*

--- a/payments/payment.html
+++ b/payments/payment.html
@@ -352,12 +352,12 @@
                                                   class="confirm-pay__trip-detail-text"
                                                 >
                                                   <div>
-                                                    <div class="_1fza94o">
+                                                    <div class="confirm-pay__trip-detail-text-sm">
                                                       Entire home
                                                     </div>
                                                     <div
                                                       id="LISTING_CARD-title"
-                                                      class="_bp4bbx"
+                                                      class="confirm-pay__trip-detail-text-md"
                                                     >
                                                       9 double bedroom luxury
                                                       villa with infinity pool
@@ -6395,12 +6395,12 @@
                                                     class="confirm-pay__trip-detail-text"
                                                   >
                                                     <div>
-                                                      <div class="_1fza94o">
+                                                      <div class="confirm-pay__trip-detail-text-sm">
                                                         Barn
                                                       </div>
                                                       <div
                                                         id="LISTING_CARD-title"
-                                                        class="_bp4bbx"
+                                                        class="confirm-pay__trip-detail-text-md"
                                                       >
                                                         Socrates' pigeon house,
                                                         Triantaros
