inline-login__heading

--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1526,7 +1526,7 @@
                                               "
                                             >
                                               <div dir="ltr">
-                                                <h3 class="_1qfgcw8">
+                                                <h3 class="inline-login__heading">
                                                   Welcome back, Jose Angelo
                                                 </h3>
                                                 <div class="user-email">
@@ -1762,7 +1762,7 @@
                                               padding-bottom: 24px;
                                             ">
                                             <div dir="ltr">
-                                              <h3 class="_1qfgcw8">
+                                              <h3 class="inline-login__heading">
                                                 Log in or sign up to book
                                               </h3>
                                               <div>
@@ -5044,7 +5044,7 @@
                                                 "
                                               >
                                                 <div dir="ltr">
-                                                  <h3 class="_1qfgcw8">
+                                                  <h3 class="inline-login__heading">
                                                     Welcome back, Jose Angelo
                                                   </h3>
                                                   <div class="user-email">
@@ -5270,7 +5270,7 @@
                                               padding-bottom: 24px;
                                             ">
                                             <div dir="ltr">
-                                              <h3 class="_1qfgcw8">
+                                              <h3 class="inline-login__heading">
                                                 Log in or sign up to book
                                               </h3>
                                               <div>
