form__help-text

--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -1247,7 +1247,7 @@
                                           >Phone number is required.
                                         </div>
                                       </div>
-                                      <div class="_166d2jm">
+                                      <div class="form__help-text">
                                         <span
                                           id="phone-number-help-text-phoneNumber"
                                           >We’ll call or text you to confirm
@@ -4627,7 +4627,7 @@
                                         >Phone number is required.
                                       </div>
                                     </div>
-                                    <div class="_166d2jm">
+                                    <div class="form__help-text">
                                       <span
                                         id="phone-number-help-text-phoneNumber"
                                         >We’ll call or text you to confirm your
