--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -7046,7 +7046,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   </div>
                                                                 </div>
                                                               </div>
-                                                              <div class="_166d2jm"><span id="phone-number-help-text-phoneNumber">We’ll call or text you to confirm
+                                                              <div class="form__help-text"><span id="phone-number-help-text-phoneNumber">We’ll call or text you to confirm
                                                                   your number. Standard message and data rates apply. <a target="_blank"
                                                                     href="/terms/privacy_policy?source=signup" class="text-link">Privacy Policy</a></span></div>
                                                               <div id="airlock-inline-container" aria-live="polite"></div>
