--- a/payments/payment.html
+++ b/payments/payment.html
@@ -2623,7 +2623,7 @@
                                             "></div>
                                         </div>
                                       </div>
-                                      <div class="_166d2jm">
+                                      <div class="form__help-text">
                                         <span id="phone-number-help-text-phoneNumber">We’ll call or text you to confirm your
                                           number. Standard message and data rates
                                           apply.
@@ -6131,7 +6131,7 @@
                                             "></div>
                                         </div>
                                       </div>
-                                      <div class="_166d2jm">
+                                      <div class="form__help-text">
                                         <span id="phone-number-help-text-phoneNumber">We’ll call or text you to confirm your
                                           number. Standard message and data rates
                                           apply.
